--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -6,14 +6,14 @@
 
 <section class="text-gray-700 body-font">
   <div class="container mx-auto">
-    <div class="flex flex-wrap -mx-4 cards">
+    <div class="flex flex-wrap md:-mx-4 cards">
       {% if items.results.size > 0 %}
       {% for item in items.results %}
         {% include 'theme/simple/items/card', item: item %}
       {% endfor %}
       {% else %}
         <p class="container my-8 text-lg text-center">
-          <a href="/items/new" class="border-2 rounded p-2">
+          <a href="/items/new" class="p-2 border-2 rounded">
             {{ 'app.dashboard-items.list-your-first-item' | t }}
           </a>
         </p>
