--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -1,4 +1,4 @@
-<div class="w-full p-4 mb-8 lg:w-1/3 md:w-1/2 card">
+<div class="w-full px-0 mb-8 md:p-4 lg:w-1/3 md:w-1/2 card">
 
   <a class="relative block h-64 overflow-hidden rounded" href="/items/show?id={{ item.id }}">
     {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
