--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -17,7 +17,7 @@ method: post
       include 'lib/commands/order_statuses/create/check', order: order, current_user_id: context.current_user.id, status: 'app.order_statuses.placed'
       include 'lib/commands/order_statuses/create/execute', status: context.exports.status
 
-      include 'lib/events/create-event', type: 'order_created', actor_id: order.buyer.id, target_id: order.seller.id, object_id: order.id
+      include 'lib/commands/events/create', type: 'order_created', actor_id: order.buyer.id, target_id: order.seller.id, object_id: order.id
 
       include 'lib/flash/publish', notice: 'app.orders.created'
       include 'redirect_to', url: '/dashboard/buy/orders'
