--- a/app/views/partials/lib/commands/item_statuses/create/execute.liquid
+++ b/app/views/partials/lib/commands/item_statuses/create/execute.liquid
@@ -1,10 +1,9 @@
-<!-- push to background -->
 {% liquid
-  graphql r = 'order_statuses/create', args: object
+  graphql r = 'item_statuses/create', args: object
 
   if r.errors
-    log object, type: 'errors.graphql.invalid order-statuses-create-execute'
-    log r.errors, type: 'errors.graphql.invalid order-statuses-create-execute'
+    log object, type: 'errors.graphql.invalid item-statuses-create-execute'
+    log r.errors, type: 'errors.graphql.invalid item-statuses-create-execute'
     assign object = object | add_hash_key: 'errors', r.errors
     assign object = object | add_hash_key: 'valid', false
   else
