Dont show admin link to plebs

--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -14,7 +14,9 @@
 
       {% if context.current_user.id  %}
       <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
-      <a href="/admin" class="mr-5 hover:text-gray-900">{{ 'app.admin' | t }}</a>
+      {% if context.current_user.email == 'godot@tlen.pl' %}
+        <a href="/admin" class="mr-5 hover:text-gray-900">{{ 'app.admin' | t }}</a>
+      {% endif %}
 
       <form action="/sessions/destroy" method="post">
         {% include 'authenticity_token' %}
