--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -6,16 +6,15 @@ method: post
   include 'lib/queries/items/find', id: context.params.item_id
 
   include 'lib/commands/orders/create/build', item: context.exports.item, current_user_id: context.current_user.id
-  include 'lib/commands/orders/create/check', order: context.exports.order
+  include 'lib/commands/orders/create/check', object: context.exports.object
 
-  if context.exports.order.valid
-    include 'lib/commands/orders/create/execute', order: context.exports.order
+  if context.exports.object.valid
+    include 'lib/commands/orders/create/execute', object: context.exports.object
 
-    if context.exports.order.valid
-      assign order = context.exports.order
-
-      include 'lib/commands/order_statuses/create/check', order: order, current_user_id: context.current_user.id, status: 'app.order_statuses.placed'
-      include 'lib/commands/order_statuses/create/execute', status: context.exports.status
+    if context.exports.object.valid
+      include 'lib/commands/order_statuses/create/build', order: context.exports.object, current_user_id: context.current_user.id, name: 'app.order_statuses.placed'
+      include 'lib/commands/order_statuses/create/check', object: context.exports.object
+      include 'lib/commands/order_statuses/create/execute', object: context.exports.object
 
       include 'lib/commands/events/create', type: 'order_created', actor_id: order.buyer.id, target_id: order.seller.id, object_id: order.id
 
