--- a/app/views/partials/lib/commands/events/broadcast/execute.liquid
+++ b/app/views/partials/lib/commands/events/broadcast/execute.liquid
@@ -2,6 +2,6 @@
   graphql consumers = 'events/consumers', name: object.type | fetch: "admin_liquid_partials" | fetch: "results"
 
   for consumer in consumers
-    include consumer.path, event: event.payload
+    include consumer.path, event: object
   endfor
 %}
