--- a/app/views/partials/lib/commands/order_statuses/create/build.liquid
+++ b/app/views/partials/lib/commands/order_statuses/create/build.liquid
@@ -1,7 +1,13 @@
+{% comment %}
+  @params
+    order - order to which status will be attached
+    name - status name
+{% endcomment %}
+
 {% parse_json object %} 
 {
-  "name": {{ name | json }},
-  "order_id": {{ order.id | json }},
+  "name":      {{ name | json }},
+  "order_id":  {{ order.id | json }},
   "timestamp": {{ 'now' | to_time | json }}
 }
 {% endparse_json %}
