--- a/app/views/partials/lib/commands/orders/create/check.liquid
+++ b/app/views/partials/lib/commands/orders/create/check.liquid
@@ -3,28 +3,28 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  if order.seller == order.buyer
+  if object.seller == object.buyer
     include 'lib/register_error', contract: c, field_name: 'base', key: 'app.errors.cannot_sell_to_yourself'
   endif
 
-  if order.seller == blank
+  if object.seller == blank
     include 'lib/register_error', contract: c, field_name: 'seller', key: 'app.errors.blank'
   endif
 
-  if order.buyer == blank
+  if object.buyer == blank
     include 'lib/register_error', contract: c, field_name: 'buyer', key: 'app.errors.blank'
   endif
 
-  if order.item_id == blank
+  if object.item_id == blank
     include 'lib/register_error', contract: c, field_name: 'item_id', key: 'app.errors.blank'
   endif
 
-  if order.total < MINIMAL_TOTAL
+  if object.total < MINIMAL_TOTAL
     include 'lib/register_error', contract: c, field_name: 'total', key: 'app.errors.too_little'
   endif
 
-  assign order = order | add_hash_key: 'errors', c.errors
-  assign order = order | add_hash_key: 'valid', c.valid
+  assign object = object | add_hash_key: 'errors', c.errors
+  assign object = object | add_hash_key: 'valid', c.valid
 
-  export order
+  export object
 %}
