--- a/app/views/partials/lib/consumers/page_visited/log.liquid
+++ b/app/views/partials/lib/consumers/page_visited/log.liquid
@@ -1,5 +1,1 @@
-{% log event.payload.uuid, log: 'slack' %}
-
-{% parse_json crash %}
-  { "incorrect": "false" }
-{% endparse_json %}
+{% log event, type: "from-log-consumer-log-2" %}
