--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -10,9 +10,9 @@
   </div>
 
   <div class="w-full my-6 md:my-0 md:mx-6 md:w-auto">
-    <label for="tag" class="block mb-1 text-gray-600 capitalize">Category</label>
+    <label for="tag" class="block mb-1 text-gray-600 capitalize">Tags</label>
     <select class="w-full form-select" id="tag" name="tag">
-      <option value="" class="text-gray-600">All categories</option>
+      <option value="" class="text-gray-600">All tags</option>
       {% for tag in filters.tags %}
         <option value="{{ tag }}" {% if query.tag == tag %}selected{% endif %}>{{ tag }}</option>
       {% endfor %}
