--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -25,8 +25,7 @@
         </button>
       </form>
       {% else %}
-      <a href="/sessions/new"
-        class="button button-sm">
+      <a href="/sessions/new" class="button button-sm">
         {{ 'app.login' | t }}
       </a>
       {% endif %}
