set item status to sold when order paid

--- a/app/views/partials/lib/consumers/order_status_created/update_item.liquid
+++ b/app/views/partials/lib/consumers/order_status_created/update_item.liquid
@@ -1,20 +1,16 @@
 {% liquid
-  log event, type: 'showme from consumers'
   include 'lib/queries/orders/find', id: event.target.id
-  include 'lib/queries/items/find',  id: context.exports.order.properties.item_id
-
-  log context.exports.order, type: 'showme from consumers'
-  log context.exports.item, type: 'showme from consumers'
+  include 'lib/queries/items/find',  id: context.exports.order.item.id
 
   assign order_status = context.exports.order.status.name
 
   if order_status == 'app.order_statuses.paid'
-
-    include 'lib/item_statuses/create/build', item_id: context.exports.item.id, name: 'app.item_statuses.sold'
-    include 'lib/item_statuses/create/check', object: context.exports.object
+    include 'lib/commands/item_statuses/create/build', item_id: context.exports.item.id, name: 'app.item_statuses.sold'
+    include 'lib/commands/item_statuses/create/check', object: context.exports.object
 
     if context.exports.object.valid
-      include 'lib/item_statuses/create/execute', object: context.exports.object
+      include 'lib/commands/item_statuses/create/execute', object: context.exports.object
+      log context.exports.object, type: 'showme from consumers'
     else
       log context.exports.object, type: 'showme'
     endif
