--- a/app/views/partials/lib/queries/users/search.liquid
+++ b/app/views/partials/lib/queries/users/search.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  graphql users = 'users/search', limit: 100 | fetch: 'users'
+  graphql users = 'users/search', limit: limit | fetch: 'users'
   export users
 %}
