fix order event

--- a/app/views/partials/theme/simple/admin/activity_log.liquid
+++ b/app/views/partials/theme/simple/admin/activity_log.liquid
@@ -4,6 +4,8 @@
     <tr>
       <td class="px-4 py-2 border-b">{% print activity.payload.date | to_time %}</td>
       <td class="px-4 py-2 border-b">{% print activity.payload.type  %}</td>
+      <td class="px-4 py-2 border-b">{{ activity.payload.object.id }}</td>
+      <td class="px-4 py-2 border-b">{{ activity.payload.actor.id }}</td>
     </tr>
   {% endfor %}
 </table>
