--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -12,6 +12,8 @@ method: post
     include 'lib/commands/orders/create/execute', object: context.exports.object
 
     if context.exports.object.valid
+      assign order = context.exports.object
+
       include 'lib/commands/order_statuses/create/build', order: context.exports.object, current_user_id: context.current_user.id, name: 'app.order_statuses.placed'
       include 'lib/commands/order_statuses/create/check', object: context.exports.object
       include 'lib/commands/order_statuses/create/execute', object: context.exports.object
