--- a/app/views/partials/test/run.liquid
+++ b/app/views/partials/test/run.liquid
@@ -1,7 +1,10 @@
 <h2 class="text-xl">test results</h2>
 {% liquid
-  graphql tests = 'tests' | dig: "admin_liquid_partials" | dig: "results"
+  graphql tests = 'tests', path: params.name | dig: "admin_liquid_partials" | dig: "results"
 
+  if tests.size == 0
+    echo 'no tests found'
+  endif
   for test in tests
     assign contract = '{ "errors": {}, "success": true }' | parse_json
     include test.path, registry: test.path, contract: contract
