--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,8 +1,8 @@
 <footer class="text-gray-700 body-font">
   <div class="container flex flex-col items-center py-8 mx-auto sm:flex-row">
-    <a class="flex items-center justify-center font-medium text-gray-900  md:justify-start">
+    <div class="flex items-center justify-center font-medium text-gray-900 md:justify-start">
       <span class="text-xl">MVP Marketplace</span>
-    </a>
+    </div>
     <p class="mt-4 text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0">© 2020 platformOS —
       <a href="https://twitter.com/platformos" class="ml-1 text-gray-600" rel="noopener noreferrer" target="_blank">@platformos</a>
     </p>
