--- a/app/views/partials/theme/simple/layout/head.liquid
+++ b/app/views/partials/theme/simple/layout/head.liquid
@@ -3,6 +3,7 @@
 <meta content="authenticity_token" name="csrf-param">
 <meta content="{{ form_authenticity_token }}" name="csrf-token">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description" content="MVP Marketplace - buy & sell">
 
 <link rel="stylesheet" href="{{ 'css/app.css' | asset_url }}">
 
