fix delete item

--- a/app/views/partials/lib/commands/items/delete/execute.liquid
+++ b/app/views/partials/lib/commands/items/delete/execute.liquid
@@ -1,4 +1,8 @@
 <!--  background -->
 {% liquid
-  graphql result = 'items/delete', id: id
+  graphql result = 'items/delete', id: object.id
+
+  if result.errors
+  else
+  endif
 %}
