--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -3,7 +3,13 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'lib/items/delete', id: params.id
-  include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
+
+  include 'lib/commands/items/delete', id: context.params.id
+
+  if context.exports.object.valid
+    include 'redirect_to', url: '/dashboard/sell/items'
+  else
+    echo context.exports.object
+  endif
 %}
 
