--- a/app/views/partials/lib/commands/items/delete/check.liquid
+++ b/app/views/partials/lib/commands/items/delete/check.liquid
@@ -1,1 +1,12 @@
-{% echo 'check' %}
+{% liquid
+  assign c = '{ "valid": true, "errors": {} }' | parse_json
+
+  if object.id == blank
+    include 'lib/register_error', contract: c, field_name: 'id', key: 'app.errors.blank'
+  endif
+
+  assign object = object | add_hash_key: 'valid', c.valid
+  assign object = object | add_hash_key: 'errors', c.errors
+
+  export object
+%}
