--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -2,6 +2,7 @@
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   / {{ 'app.' | append: role | t }}
   / {{ 'app.orders.list' | t }}
+  ({{ orders.total_entries  }})
 </h1>
 
 {% if orders.total_entries > 0 %}
@@ -23,7 +24,7 @@
           <td class="px-4 py-2 border-b">{{ order.created_at | l }}</td>
           <td class="px-4 py-2 border-b">
             <a href="/items/show?id={{ order.item.id }}">
-              {{ order.item.name }}
+              {% print order.item.name %}
               <small> {% echo order.item.status.name | default: 'app.item_statuses.none' | t %}</small>
             </a>
           </td>
