add sort to search form

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -2,5 +2,5 @@
   include 'lib/queries/items/search', query: context.params, limit: 9, featured: true
   include 'lib/search/main'
 
-  include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form.properties
+  include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form
 %}
