--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,4 +1,4 @@
-<form action="/s" class="flex flex-wrap my-6">
+<div class="flex flex-wrap my-6">
   <div class="w-full md:flex-1 md:w-auto">
     <label for="k" class="block mb-1 text-gray-600 capitalize">Keywords</label>
     <input class="w-full form-input"
@@ -20,4 +20,4 @@
   </div>
 
   <button name="submit" value="search" class="w-full md:mt-auto md:w-auto button">Search</button>
-</form>
+</div>
