--- a/app/views/partials/lib/queries/items/search.liquid
+++ b/app/views/partials/lib/queries/items/search.liquid
@@ -1,9 +1,16 @@
-{% liquid
-  parse_json sort_price_desc
-    echo '{ "properties": { "name": "price", "order": "DESC" } }'
-  endparse_json
+{% parse_json sort_options %}
+{
+   "price_desc": { "properties": { "name": "price", "order": "DESC" }},
+   "price_asc": { "properties": { "name": "price", "order": "ASC" }},
+   "name_desc": { "properties": { "name": "name", "order": "DESC" }},
+   "name_asc": { "properties": { "name": "name", "order": "ASC" }},
+   "created_at_desc": { "created_at": { "order": "DESC" }},
+   "created_at_asc": { "created_at": { "order": "ASC" }}
+}
+{% endparse_json %}
 
-  graphql items = 'items/search', limit: limit, keyword: query.k, tag: query.tag, sort: sort_price_desc | fetch: 'items'
+{% liquid
+  graphql items = 'items/search', limit: limit, keyword: query.k, tag: query.tag, sort: sort_options[query.sort] | fetch: 'items'
 
   export query, namespace: "search"
   export items
