--- a/app/views/partials/lib/must_be_authenticated.liquid
+++ b/app/views/partials/lib/must_be_authenticated.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  unless context.current_user
+  unless context.current_user or context.session.reset_password_session_user_id
     include 'lib/flash/publish', error: 'app.errors.unauthenticated'
 
     assign return_to = context.location.href
