--- a/app/views/pages/items/new.liquid
+++ b/app/views/pages/items/new.liquid
@@ -4,5 +4,5 @@
   include 'lib/queries/categories'
   include 'lib/queries/presigned_url'
 
-  include 'theme/simple/items/new', icons: context.exports.lib.icons
+  include 'theme/simple/items/new', lib: context.exports.lib
 %}
