--- a/app/views/partials/lib/commands/items/update/build.liquid
+++ b/app/views/partials/lib/commands/items/update/build.liquid
@@ -3,9 +3,10 @@
     "id":          {{ object.id | json }},
     "name":        {{ object.name | json }},
     "cover_photo": {{ object.cover_photo | json }},
-    "tags":        {{ object.tags | split: ',' }},
+    "tags":        {{ object.tags | split: ',' | uniq }},
     "description": {{ object.description | default: "" | json }},
     "type":        {{ object.type | default: "" | json }},
+    "category":    {{ object.category | default: "" | json }},
     "price":       {{ object.price | plus: 0 }}
   }
 {% endparse_json %}
