--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,6 +1,7 @@
 {% liquid
   include 'lib/queries/items/search', query: context.params, limit: 9, featured: true
   include 'lib/search/main'
+  include 'lib/queries/categories'
 
-  include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form
+  include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form, lib: context.exports.lib
 %}
