--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -4,6 +4,8 @@ slug: s
 
 {% liquid
   include 'lib/queries/items/search', query: context.params, limit: 200
+  include 'lib/queries/categories'
   include 'lib/search/main'
-  include 'theme/simple/home/index', items: context.exports.items, search: context.exports.search, filters: context.exports.search_form
+
+  include 'theme/simple/home/index', items: context.exports.items, search: context.exports.search, filters: context.exports.search_form, lib: context.exports.lib
 %}
