--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -24,6 +24,6 @@ method: post
     include 'lib/queries/categories'
     include 'lib/queries/presigned_url'
 
-    include 'theme/simple/items/edit', item: context.exports.object, icons: context.exports.lib.icons
+    include 'theme/simple/items/edit', item: context.exports.object, lib: context.exports.lib
   endif
 %}
