--- a/app/views/partials/lib/commands/items/create/build.liquid
+++ b/app/views/partials/lib/commands/items/create/build.liquid
@@ -4,9 +4,10 @@
     "owner":       {{ owner | json }},
     "name":        {{ object.name | json }},
     "cover_photo": {{ object.cover_photo | json }},
-    "tags":        {{ object.tags | split: ',' }},
+    "tags":        {{ object.tags | split: ',' | uniq }},
     "description": {{ object.description | default: "" | json }},
     "type":        {{ object.type | default: "" | json }},
+    "category":    {{ object.category | default: "" | json }},
     "price":       {{ object.price | plus: 0 }},
     "uuid":        {{ object.uuid | json }}
   }
