--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -28,6 +28,23 @@
       </div>
 
       <div class="mt-3">
+        <label class="block" for="cover_photo">Category</label>
+        <select class="form-select" id="category" name="item[category]">
+          {% for category in lib.categories %}
+            {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
+            <option value="{{ category }}" {% if item.category == category %}selected{% endif %}>
+                {% for step in (1..ident) %} {{ "&nbsp;" }} {% endfor %}
+                {{ 'categories.' | append: category | t }}
+            </option>
+          {% endfor %}
+        </select>
+
+        {% if item.errors.cover_photo %}
+        <span class="text-red-800">{{ item.errors.cover_photo }}</span>
+        {% endif %}
+      </div>
+
+      <div class="mt-3">
         <label class="block" for="type">Type</label>
         <input class="w-2/3 form-input" type="text" id="type" name="item[type]" value="{{ item.type }}" />
         {% if item.errors.type %}
@@ -65,7 +82,7 @@
       <div class="mt-3">
         <label class="block" for="cover_photo">Icon</label>
         <select class="w-64 form-select" id="price" name="item[cover_photo]">
-          {% for icon in icons %}
+          {% for icon in lib.icons %}
           <option value="{{ icon[0] }}" {% if item.cover_photo == icon[0] %}selected{% endif %}>
             {{ icon[1] }}
           </option>
