--- a/app/views/partials/lib/commands/items/update/build.liquid
+++ b/app/views/partials/lib/commands/items/update/build.liquid
@@ -3,7 +3,7 @@
     "id":          {{ object.id | json }},
     "name":        {{ object.name | json }},
     "cover_photo": {{ object.cover_photo | json }},
-    "tags":        {{ object.tags | split: ',' | uniq }},
+    "tags":        {{ object.tags | downcase | split: ',' | uniq }},
     "description": {{ object.description | default: "" | json }},
     "type":        {{ object.type | default: "" | json }},
     "category":    {{ object.category | default: "" | json }},
