--- a/app/views/partials/lib/search/update_search_form.liquid
+++ b/app/views/partials/lib/search/update_search_form.liquid
@@ -4,7 +4,8 @@
   if search_form == null
     graphql search_form = 'search/create_search_form', tags: tags
   else
-    assign tags = search_form.properties.tags | concat: tags | uniq | sort
+    assign tags = search_form.tags | concat: tags | uniq | sort
+
     graphql search_form = 'search/update_search_form', id: search_form.id, tags: tags
   endif
 %}
