--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -10,6 +10,7 @@
   </div>
 
   <div class="w-full my-6 md:my-0 md:mx-6 md:w-auto">
+    <label for="tag" class="block mb-1 text-gray-600 capitalize">Category</label>
     <select class="form-select" id="category" name="category">
       {% for category in lib.categories %}
         {% assign ident = category | split: '/' | size | minus: 1 | times: 2 %}
