--- a/app/views/partials/lib/queries/categories.liquid
+++ b/app/views/partials/lib/queries/categories.liquid
@@ -45,6 +45,30 @@ clothing/women/women_suits
 clothing/women/women_swimwear
 clothing/women/women_tops
 clothing/women/women_trousers
+health_n_beauty
+health_n_beauty/bodycare_n_fitness
+health_n_beauty/bodycare_n_fitness/bodycare_appliances
+health_n_beauty/bodycare_n_fitness/shaving
+health_n_beauty/cosmetics_n_skincare
+health_n_beauty/cosmetics_n_skincare/cosmetics
+health_n_beauty/cosmetics_n_skincare/fragrance
+health_n_beauty/cosmetics_n_skincare/skincare
+health_n_beauty/haircare
+health_n_beauty/haircare/haircare_appliances
+health_n_beauty/haircare/haircare_products
+health_n_beauty/health
+health_n_beauty/health/contact_lenses
+health_n_beauty/health/diet
+health_n_beauty/health/glasses
+health_n_beauty/health/medical
+health_n_beauty/health/nutrition
+health_n_beauty/health/oral_health
+health_n_beauty/health/vitamins_n_supplements
+jewellery
+jewellery/mens_jewellery
+jewellery/mens_watches
+jewellery/womens_jewellery
+jewellery/womens_watches
 {%- endcapture -%}
 
 {% liquid
